--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/cn.hutool/hutool-all -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>4.1.5</version>
+        </dependency>
 
     </dependencies>
 
